--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Home</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link href="css/bootstrap.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
@@ -57,13 +57,13 @@
           <div class="col-sm-8">
             <main class="form-signin w-100 m-auto">
                 <form>
-                  <img class="mb-4" src="../assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">
-                  <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
+                  <h1 class="h3 mb-3 fw-normal">Log Into Your Account</h1>
               
                   <div class="form-floating">
                     <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
                     <label for="floatingInput">Email address</label>
                   </div>
+                  <p></p>
                   <div class="form-floating">
                     <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
                     <label for="floatingPassword">Password</label>
@@ -75,13 +75,12 @@
                     </label>
                   </div>
                   <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
-                  <p class="mt-5 mb-3 text-muted">&copy; 2017–2022</p>
                 </form>
               </main>
           </div>
           <div class="col-sm-4">col-sm-4</div>
         </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <script src="js/bootstrap.bundle.js"></script>
 </body>
 </html>
