--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Home</title>
+    <title>Log In</title>
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
 </head>
@@ -19,10 +19,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link" aria-current="page" href="#">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Log In</a>
+                    <a class="nav-link active" href="#">Log In</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Cart</a>
@@ -35,7 +35,6 @@
                     <li><a class="dropdown-item" href="#">Women</a></li>
                     <li><a class="dropdown-item" href="#">Men</a></li>
                     <li><a class="dropdown-item" href="#">Kids</a></li>
-                    <li><a class="dropdown-item" href="#">Beauty</a></li>
                     </ul>
                 </li>
             </ul>
@@ -54,19 +53,18 @@
     </nav>
     <div class="container text-center">
         <div class="row">
-          <div class="col-sm-8">
+          <div class="col-sm-7 login">
             <main class="form-signin w-100 m-auto">
                 <form>
-                  <h1 class="h3 mb-3 fw-normal">Log Into Your Account</h1>
-              
+                  <h1 class="h3 mb-3 fw-bold">Log Into Your Account</h1>
                   <div class="form-floating">
-                    <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-                    <label for="floatingInput">Email address</label>
+                    <input type="email" class="form-control" id="floatingInputSI" placeholder="name@example.com">
+                    <label for="floatingInputSI">Email address</label>
                   </div>
-                  <p></p>
+
                   <div class="form-floating">
-                    <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
-                    <label for="floatingPassword">Password</label>
+                    <input type="password" class="form-control" id="floatingPasswordSI" placeholder="Password">
+                    <label for="floatingPasswordSI">Password</label>
                   </div>
               
                   <div class="checkbox mb-3">
@@ -74,11 +72,25 @@
                       <input type="checkbox" value="remember-me"> Remember me
                     </label>
                   </div>
-                  <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
+                  <button class="w-100 btn btn-lg btn-primary" id="accLogIn" type="submit">Sign in</button>
                 </form>
               </main>
           </div>
-          <div class="col-sm-4">col-sm-4</div>
+          <div class="col-sm-5"><main class="form-register w-100 m-auto">
+            <form>
+              <h1 class="h3 mb-3 fw-bold">Need An Account?</h1>
+              <div class="form-floating">
+                <input type="email" class="form-control" id="floatingInputR" placeholder="name@example.com">
+                <label for="floatingInputR">Email address</label>
+              </div>
+
+              <div class="form-floating">
+                <input type="password" class="form-control" id="floatingPasswordR" placeholder="Password">
+                <label for="floatingPasswordR">Password</label>
+              </div>
+
+              <button class="w-100 btn btn-lg btn-primary" id="accRegister" type="submit">Register</button>
+            </form></div>
         </div>
     </div>
     <script src="js/bootstrap.bundle.js"></script>
