--- a/index.html
+++ b/index.html
@@ -32,9 +32,46 @@
                   Products
                 </a>
                 <ul class="dropdown-menu dropdown-menu-dark">
-                  <li><a class="dropdown-item" href="#">Women</a></li>
-                  <li><a class="dropdown-item" href="#">Men</a></li>
-                  <li><a class="dropdown-item" href="#">Kids</a></li>
+                  <li><a class="dropdown-item" href="#">Women</a>
+                    <ul class="dropdown-menu dropdown-submenu">
+                      <li>
+                        <a class="dropdown-item" href="#">Jackets</a>
+                      </li>
+                      <li>
+                        <a class="dropdown-item" href="#">Dresses</a>
+                      </li>
+                      <li>
+                        <a class="dropdown-item" href="#">Shirts</a>
+                      </li>
+                      <li>
+                        <a class="dropdown-item" href="#">Trousers</a>
+                      </li>
+                    </ul></li>
+                  <li><a class="dropdown-item" href="#">Men</a><ul class="dropdown-menu dropdown-submenu">
+                    <li>
+                      <a class="dropdown-item" href="#">Jackets</a>
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href="#">Shoes</a>
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href="#">Shirts</a>
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href="#">Trousers</a>
+                    </li>
+                  </ul></li>
+                  <li><a class="dropdown-item" href="#">Kids</a><ul class="dropdown-menu dropdown-submenu">
+                    <li>
+                      <a class="dropdown-item" href="#">Jackets</a>
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href="#">Dresses</a>
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href="#">Shorts</a>
+                    </li>
+                  </ul></li>
                 </ul>
               </li>
             </ul>
