--- a/login.html
+++ b/login.html
@@ -17,27 +17,64 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" href="#">Log In</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Cart</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Products
-                    </a>
-                    <ul class="dropdown-menu dropdown-menu-dark">
-                    <li><a class="dropdown-item" href="#">Women</a></li>
-                    <li><a class="dropdown-item" href="#">Men</a></li>
-                    <li><a class="dropdown-item" href="#">Kids</a></li>
-                    </ul>
-                </li>
-            </ul>
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Log In</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Cart</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Products
+              </a>
+              <ul class="dropdown-menu dropdown-menu-dark">
+                <li><a class="dropdown-item" href="#">Women</a>
+                  <ul class="dropdown-menu dropdown-submenu">
+                    <li>
+                      <a class="dropdown-item" href="#">Jackets</a>
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href="#">Dresses</a>
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href="#">Shirts</a>
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href="#">Trousers</a>
+                    </li>
+                  </ul></li>
+                <li><a class="dropdown-item" href="#">Men</a><ul class="dropdown-menu dropdown-submenu">
+                  <li>
+                    <a class="dropdown-item" href="#">Jackets</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="#">Shoes</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="#">Shirts</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="#">Trousers</a>
+                  </li>
+                </ul></li>
+                <li><a class="dropdown-item" href="#">Kids</a><ul class="dropdown-menu dropdown-submenu">
+                  <li>
+                    <a class="dropdown-item" href="#">Jackets</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="#">Dresses</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="#">Shorts</a>
+                  </li>
+                </ul></li>
+              </ul>
+            </li>
+          </ul>
             <form class="d-flex" role="search">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
               <button class="btn btn-outline-light" type="submit">Search</button>
