updated product details (added menu)

--- a/productdetails.html
+++ b/productdetails.html
@@ -22,9 +22,6 @@
               <a class="nav-link" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Log In</a>
-            </li>
-            <li class="nav-item">
               <a class="nav-link" href="#">Cart</a>
             </li>
             <li class="nav-item dropdown">
@@ -104,7 +101,23 @@
                 </div>
             </div>
             <div class="col">
-                yay!!!!!!!!
+                <div class="productDetailContent text-start">
+                    <h1>Product Name</h1>
+                    <h3>Price</h3>
+                    <p>detail stuff</p>
+                    <hr />
+                    <div class="selector">
+                        <img src="img/bg.png">
+                        <img src="img/bg.png">
+                        <img src="img/bg.png">
+                    </div>
+                    <div class="selector">
+                        <img src="img/bg.png">
+                        <img src="img/bg.png">
+                        <img src="img/bg.png">
+                    </div>
+                </div>
+                <button type="button" class="btn btn-dark btn-add">Add</button>
             </div>
         </div>
     </div>
