--- a/index.html
+++ b/index.html
@@ -88,20 +88,29 @@
         <div class="carousel-inner">
           <div class="carousel-item bg1 active">
             <div class="carousel-caption d-none d-md-block">
-              <h5>First slide label</h5>
-              <p>Some representative placeholder content for the first slide.</p>
+              <div class ="carousel-item-bg">
+                <h5>First slide label</h5>
+                <p>Some representative placeholder content for the first slide.</p>
+                <button type="button" class="go-btn btn btn-outline-light btn-lg">GO</button>
+              </div>
             </div>
           </div>
           <div class="carousel-item bg2">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Second slide label</h5>
-              <p>Some representative placeholder content for the second slide.</p>
+              <div class="carousel-item-bg">
+                <h5>Second slide label</h5>
+                <p>Some representative placeholder content for the second slide.</p>
+                <button type="button" class="go-btn btn btn-outline-light btn-lg">GO</button>
+              </div>
             </div>
           </div>
           <div class="carousel-item bg3">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>Some representative placeholder content for the third slide.</p>
+              <div class="carousel-item-bg">
+                <h5>Third slide label</h5>
+                <p>Some representative placeholder content for the third slide.</p>
+                <button type="button" class="go-btn btn btn-outline-light btn-lg">GO</button>
+              </div>
             </div>
           </div>
         </div>
