--- a/productdetails.html
+++ b/productdetails.html
@@ -88,7 +88,7 @@
     </nav>
     <div class="container text-center">
         <div class="row">
-            <div class="col">
+            <div class="col-12 col-lg-6">
                 <div class="row productDetailImg">
                     <div class="col-9">
                         <img id="mainimg" src="img/bg.png">
@@ -100,7 +100,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col">
+            <div class="col-12 col-lg-6">
                 <div class="productDetailContent text-start">
                     <h1>Product Name</h1>
                     <h3>Price</h3>
@@ -119,6 +119,17 @@
                 </div>
                 <button type="button" class="btn btn-dark btn-add">Add</button>
             </div>
+        </div>
+        <div class="row text-start">
+          <p>
+            product details and stuffaaaaaaaaaaaaaaaaaaa
+            aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+            aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+          </p>
+          <p>
+            aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+            aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+          </p>
         </div>
     </div>
     <script src="js/bootstrap.bundle.js"></script>
