revamped products page, added filter and sort, removed product details

--- a/index.html
+++ b/index.html
@@ -24,58 +24,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="#">Cart</a>
               </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Products
-                </a>
-                <ul class="dropdown-menu dropdown-menu-dark">
-                  <li><a class="dropdown-item" href="#">Women</a>
-                    <ul class="dropdown-menu dropdown-submenu">
-                      <li>
-                        <a class="dropdown-item" href="#">Jackets</a>
-                      </li>
-                      <li>
-                        <a class="dropdown-item" href="#">Dresses</a>
-                      </li>
-                      <li>
-                        <a class="dropdown-item" href="#">Shirts</a>
-                      </li>
-                      <li>
-                        <a class="dropdown-item" href="#">Trousers</a>
-                      </li>
-                    </ul></li>
-                  <li><a class="dropdown-item" href="#">Men</a><ul class="dropdown-menu dropdown-submenu">
-                    <li>
-                      <a class="dropdown-item" href="#">Jackets</a>
-                    </li>
-                    <li>
-                      <a class="dropdown-item" href="#">Shoes</a>
-                    </li>
-                    <li>
-                      <a class="dropdown-item" href="#">Shirts</a>
-                    </li>
-                    <li>
-                      <a class="dropdown-item" href="#">Trousers</a>
-                    </li>
-                  </ul></li>
-                  <li><a class="dropdown-item" href="#">Kids</a><ul class="dropdown-menu dropdown-submenu">
-                    <li>
-                      <a class="dropdown-item" href="#">Jackets</a>
-                    </li>
-                    <li>
-                      <a class="dropdown-item" href="#">Dresses</a>
-                    </li>
-                    <li>
-                      <a class="dropdown-item" href="#">Shorts</a>
-                    </li>
-                  </ul></li>
-                </ul>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Products</a>
               </li>
-            </ul>
-            <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-light" type="submit">Search</button>
-            </form>
           </div>
         </div>
       </nav>
