--- a/products.html
+++ b/products.html
@@ -5,174 +5,74 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Products</title>
     <link href="css/bootstrap.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">
-          <img src="/docs/5.2/assets/brand/bootstrap-logo.svg" alt="Bootstrap" width="30" height="24">
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Cart</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle active" aria-current="page" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Products
-              </a>
-              <ul class="dropdown-menu dropdown-menu-dark">
-                <li><a class="dropdown-item" href="#">Women</a>
-                  <ul class="dropdown-menu dropdown-submenu">
-                    <li>
-                      <a class="dropdown-item" href="#">Jackets</a>
-                    </li>
-                    <li>
-                      <a class="dropdown-item" href="#">Dresses</a>
-                    </li>
-                    <li>
-                      <a class="dropdown-item" href="#">Shirts</a>
-                    </li>
-                    <li>
-                      <a class="dropdown-item" href="#">Trousers</a>
-                    </li>
-                  </ul></li>
-                <li><a class="dropdown-item" href="#">Men</a><ul class="dropdown-menu dropdown-submenu">
-                  <li>
-                    <a class="dropdown-item" href="#">Jackets</a>
-                  </li>
-                  <li>
-                    <a class="dropdown-item" href="#">Shoes</a>
-                  </li>
-                  <li>
-                    <a class="dropdown-item" href="#">Shirts</a>
-                  </li>
-                  <li>
-                    <a class="dropdown-item" href="#">Trousers</a>
-                  </li>
-                </ul></li>
-                <li><a class="dropdown-item" href="#">Kids</a><ul class="dropdown-menu dropdown-submenu">
-                  <li>
-                    <a class="dropdown-item" href="#">Jackets</a>
-                  </li>
-                  <li>
-                    <a class="dropdown-item" href="#">Dresses</a>
-                  </li>
-                  <li>
-                    <a class="dropdown-item" href="#">Shorts</a>
-                  </li>
-                </ul></li>
-              </ul>
-            </li>
-          </ul>
-          <form class="d-flex" role="search">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-light" type="submit">Search</button>
-          </form>
-        </div>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">
+        <img src="/docs/5.2/assets/brand/bootstrap-logo.svg" alt="Bootstrap" width="30" height="24">
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Cart</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Products</a>
+          </li>
       </div>
-    </nav>
-    <nav aria-label="breadcrumb">
-      <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="#">Home</a></li>
-        <li class="breadcrumb-item active" aria-current="page">Products</li>
-      </ol>
-    </nav>
-    <div class="container text-center">
-      <div class="row" id="productHeader">
-        <div class="col">
-          <h1 class="productsTitle">Category</h1>
-          <p class="productsDesc">description</p>
+    </div>
+  </nav>
+  <nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+      <li class="breadcrumb-item"><a href="#">Home</a></li>
+      <li class="breadcrumb-item active" aria-current="page">Products</li>
+    </ol>
+  </nav>
+  <div class="container text-center">
+    <div class="row productHeader">
+      <div class="col">
+        <div class="productTitle">
+          <h1>Our Products</h1>
         </div>
-      </div>
-      <div class="row" id="productContent">
-        <div class="col-3">
-          <div class="accordion" id="accordionPanelsStayOpenExample">
-            <div class="accordion-item">
-              <h2 class="accordion-header">
-                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
-                  Accordion Item #1
-                </button>
-              </h2>
-              <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show">
-                <div class="accordion-body">
-                  <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
-                </div>
-              </div>
-            </div>
-            <div class="accordion-item">
-              <h2 class="accordion-header">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
-                  Accordion Item #2
-                </button>
-              </h2>
-              <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse">
-                <div class="accordion-body">
-                  <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
-                </div>
-              </div>
-            </div>
+        <div class="filters text-start">
+          <div class="dropdown">
+            <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Categories
+            </button>
+            <ul class="dropdown-menu">
+              <li><button class="dropdown-item" onclick="filterCat('all')">All</button></li>
+              <li><button class="dropdown-item" onclick="filterCat('ring')">Rings</button></li>
+              <li><button class="dropdown-item" onclick="filterCat('necklace')">Necklaces</button></li>
+              <li><button class="dropdown-item" onclick="filterCat('bracelet')">Bracelets</button></li>
+            </ul>
           </div>
-        </div>
-        <div class="col-9">
-          <!-- page detail -->
-          <div class="row text-start">
-            <div class="col">
-              <p>xx items</p>
-            </div>
+          <div class="dropdown">
+            <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Sort Price
+            </button>
+            <ul class="dropdown-menu">
+              <li><button class="dropdown-item" onclick="Default()">Default</button></li>
+              <li><button class="dropdown-item" onclick="LowToHigh()">Low to High</button></li>
+              <li><button class="dropdown-item" onclick="HighToLow()">High to Low</button></li>
+            </ul>
           </div>
-          <!-- product row 1 -->
-          <div class="row">
-            <div class="col">
-              <img class="productImg" src="img/bg.png">
-              <h6>color/size</h6>
-              <h5>Product Name</h5>
-              <h5>Price</h5>
-            </div>
-            <div class="col">
-              <img class="productImg" src="img/bg.png">
-              <h6>color/size</h6>
-              <h5>Product Name</h5>
-              <h5>Price</h5>
-            </div>
-            <div class="col">
-              <img class="productImg" src="img/bg.png">
-              <h6>color/size</h6>
-              <h5>Product Name</h5>
-              <h5>Price</h5>
-            </div>
-          </div>
-          <!-- product row 2 -->
-          <div class="row">
-            <div class="col">
-              <img class="productImg" src="img/bg.png">
-              <h6>color/size</h6>
-              <h5>Product Name</h5>
-              <h5>Price</h5>
-            </div>
-            <div class="col">
-              <img class="productImg" src="img/bg.png">
-              <h6>color/size</h6>
-              <h5>Product Name</h5>
-              <h5>Price</h5>
-            </div>
-            <div class="col">
-              <img class="productImg" src="img/bg.png">
-              <h6>color/size</h6>
-              <h5>Product Name</h5>
-              <h5>Price</h5>
-            </div>
-          </div>    
         </div>
       </div>
     </div>
-    <script src="js/bootstrap.bundle.js"></script>
+    <div class="row" id="productContent">
+      
+    </div>
+  </div>
+  <script src="js/bootstrap.bundle.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
