--- a/products.html
+++ b/products.html
@@ -44,27 +44,21 @@
           <h1>Our Products</h1>
         </div>
         <div class="filters text-start">
-          <div class="dropdown">
-            <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Categories
-            </button>
-            <ul class="dropdown-menu">
-              <li><button class="dropdown-item" onclick="filterCat('all')">All</button></li>
-              <li><button class="dropdown-item" onclick="filterCat('ring')">Rings</button></li>
-              <li><button class="dropdown-item" onclick="filterCat('necklace')">Necklaces</button></li>
-              <li><button class="dropdown-item" onclick="filterCat('bracelet')">Bracelets</button></li>
-            </ul>
-          </div>
-          <div class="dropdown">
-            <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Sort Price
-            </button>
-            <ul class="dropdown-menu">
-              <li><button class="dropdown-item" onclick="Default()">Default</button></li>
-              <li><button class="dropdown-item" onclick="LowToHigh()">Low to High</button></li>
-              <li><button class="dropdown-item" onclick="HighToLow()">High to Low</button></li>
-            </ul>
-          </div>
+          <label for="cat">Categories:</label>
+          <select id="cat" class="form-select">
+            <option onclick="filterCat('all')">All</option>
+            <option onclick="filterCat('ring')">Rings</option>
+            <option onclick="filterCat('necklace')">Necklaces</option>
+            <option onclick="filterCat('bracelet')">Bracelets</option>
+          </select> 
+
+          <label for="sort">Sort by Price:</label>
+          <select id="sort" class="form-select">
+            <option onclick="Default()">Default</option>
+            <option onclick="LowToHigh()">Low to High</option>
+            <option onclick="HighToLow()">High to Low</option>
+          </select> 
+          
         </div>
       </div>
     </div>
