--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <a class="nav-link active" aria-current="page" href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Cart</a>
+                <a class="nav-link" href="cart.html">Cart</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="products.html">Products</a>
