--- a/products.html
+++ b/products.html
@@ -20,10 +20,10 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="index.html">Home</a>
+            <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Cart</a>
+            <a class="nav-link" href="cart.html">Cart</a>
           </li>
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="products.html">Products</a>
@@ -31,13 +31,7 @@
       </div>
     </div>
   </nav>
-  <nav aria-label="breadcrumb">
-    <ol class="breadcrumb">
-      <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-      <li class="breadcrumb-item active" aria-current="page">Products</li>
-    </ol>
-  </nav>
-  <div class="container text-center">
+  <div class="padNav container text-center">
     <div class="row productHeader">
       <div class="col">
         <div class="productTitle">
