--- a/cart.html
+++ b/cart.html
@@ -36,7 +36,7 @@
         <h1>Cart</h1>
         <button type="button" class="btn btn-outline-dark clearCart">Clear Cart</button>
     </div>
-    <div class="cartArea">
+    <div id="cartArea" class="cartArea">
         <div class="cartItems">
             <div class="cartItem text-center">
                 <i class="bi bi-x-circle-fill trash"></i>
@@ -53,10 +53,9 @@
                     </div>
                 </div>
             </div>
-            
         </div>
         <div class="checkoutArea">
-            <div class="total text-nowrap">TOTAL: $3232.00</div>
+            <div id="total" class="total text-nowrap">TOTAL: $3232.00</div>
             <button type="button" class="btn btn-dark checkoutBtn">CHECKOUT</button>
         </div>
     </div>
