--- a/products.html
+++ b/products.html
@@ -26,7 +26,7 @@
             <a class="nav-link active" aria-current="page" href="products.html">Products</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="cart.html">Cart</a>
+            <a id="nav-cart" class="nav-link" href="cart.html">Cart</a>
           </li>
       </div>
     </div>
