--- a/paid.html
+++ b/paid.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Cart</title>
+    <title>Products</title>
     <link href="css/bootstrap.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href="style.css" rel="stylesheet">
@@ -26,27 +26,14 @@
             <a class="nav-link" href="products.html">Products</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="cart.html">Cart</a>
+            <a class="nav-link" href="cart.html">Cart</a>
           </li>
       </div>
     </div>
   </nav>
-  <div class="padNav container text-start">
-    <div class="cartTitle">
-        <h1>Cart</h1>
-        <button type="button" class="btn btn-outline-dark clearCart" onclick="ClearCart()">Clear Cart</button>
-    </div>
-    <div class="cartArea">
-        <div id="cartItems" class="cartItems">
-            
-        </div>
-        <div class="checkoutArea">
-            <div id="total" class="total text-nowrap"></div>
-            <a href="paid.html" class="btn btn-dark checkoutBtn">CHECKOUT</a> 
-        </div>
-    </div>
+  <div class="padNav container text-center">
+    you paid :)
   </div>
   <script src="js/bootstrap.bundle.js"></script>
-  <script src="cart.js"></script>
 </body>
 </html>
