--- a/Wheel.html
+++ b/Wheel.html
@@ -1,14 +1,20 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Wheel</title>
     <link href="css/bootstrap.css" rel="stylesheet">
-    <link href="style.css" rel="stylesheet">
+    <link href="wheelstyle.css" rel="stylesheet">
 </head>
 <body>
-
-    <script src="js/bootstrap.bundle.js"></script>
+  <canvas id="wheelCanvas" width="500" height="500"></canvas>
+  <button id="spin-button">Spin for your prize!</button>
+    <!-- Chart JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"></script>
+    <!-- Chart JS Plugin for displaying text over chart -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/chartjs-plugin-datalabels/2.1.0/chartjs-plugin-datalabels.min.js"></script>
+    <!-- Script -->
+    <script src="wheeljava.js"></script>
 </body>
 </html>
