--- a/cart.html
+++ b/cart.html
@@ -20,13 +20,13 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" href="index.html">Home</a>
+            <a class="nav-link" onclick="patchAPI();delay('index.html');">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="products.html">Products</a>
+            <a class="nav-link" onclick="patchAPI();delay('products.html');">Products</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="cart.html">Cart</a>
+            <a class="nav-link active" aria-current="page">Cart</a>
           </li>
       </div>
     </div>
