--- a/products.html
+++ b/products.html
@@ -9,7 +9,12 @@
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+  <div id="loading" class="hidden">
+    <div id="loading-icon" class="animation-center hidden">
+      <dotlottie-player src="https://lottie.host/00f5781f-7a7c-4254-91c1-5d58abf0f4fe/j0ppqxUpMa.json" background="transparent" speed="1" style="width: 300px; height: 300px" direction="1" playMode="normal" loop autoplay></dotlottie-player>
+    </div>
+  </div>
+  <nav id="navbar" class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
         <img src="/docs/5.2/assets/brand/bootstrap-logo.svg" alt="Bootstrap" width="30" height="24">
@@ -31,7 +36,7 @@
       </div>
     </div>
   </nav>
-  <div class="padNav container text-center">
+  <div id="content" class="padNav container text-center">
     <div class="row productHeader">
       <div class="col">
         <div class="productTitle">
@@ -61,6 +66,7 @@
     </div>
   </div>
   <script src="js/bootstrap.bundle.js"></script>
+  <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script>
   <script src="script.js"></script>
 </body>
 </html>
