--- a/index.html
+++ b/index.html
@@ -40,17 +40,17 @@
           <div class="carousel-item bg1 active">
             <div class="carousel-caption d-none d-md-block">
               <div class ="carousel-item-bg">
-                <h5>First slide label</h5>
-                <p>Some representative placeholder content for the first slide.</p>
-                <button type="button" class="go-btn btn btn-outline-light btn-lg">GO</button>
+                <h4>VIEW OUR PRODUCTS</h4>
+                <p>Necklaces, bracelets, rings — we have it all.</p>
+                <a href="products.html"><button type="button" class="go-btn btn btn-outline-light btn-lg">GO</button></a>
               </div>
             </div>
           </div>
           <div class="carousel-item bg2">
             <div class="carousel-caption d-none d-md-block">
               <div class="carousel-item-bg">
-                <h5>Second slide label</h5>
-                <p>Some representative placeholder content for the second slide.</p>
+                <h4>HOW WELL DO YOU KNOW US?</h4>
+                <p>Take our short quiz for discount (up to 5%) on your order!</p>
                 <button type="button" class="go-btn btn btn-outline-light btn-lg">GO</button>
               </div>
             </div>
@@ -58,9 +58,8 @@
           <div class="carousel-item bg3">
             <div class="carousel-caption d-none d-md-block">
               <div class="carousel-item-bg">
-                <h5>Third slide label</h5>
-                <p>Some representative placeholder content for the third slide.</p>
-                <button type="button" class="go-btn btn btn-outline-light btn-lg">GO</button>
+                <h4>WHEEL OF FORTUNE</h4>
+                <p>After placing your order, spin a wheel to win attractive prizes! <br />*Prizes will vary based on order total.</p>
               </div>
             </div>
           </div>
