changed div tag to main, linked cart to wheel to leaderboard

--- a/cart.html
+++ b/cart.html
@@ -37,7 +37,7 @@
       </div>
     </div>
   </nav>
-  <div id="content" class="padNav container text-start">
+  <main id="content" class="padNav container text-start">
     <div class="cartTitle">
         <h1>CART</h1>
         <button type="button" class="btn btn-outline-dark clearCart" onclick="ClearCart()">CLEAR CART</button>
@@ -48,10 +48,10 @@
         </div>
         <div class="checkoutArea">
             <div id="total" class="total text-nowrap"></div>
-            <a href="paid.html" class="btn btn-dark checkoutBtn">CHECKOUT</a> 
+            <button type="button" class="btn btn-dark checkoutBtn" onclick="Checkout()">CHECKOUT</a> 
         </div>
     </div>
-  </div>
+  </main>
   <footer id="foot">
     <div>
       <img class="brand" src="img/icon.png" alt="Icon">
