--- a/products.html
+++ b/products.html
@@ -37,7 +37,7 @@
       </div>
     </div>
   </nav>
-  <div id="content" class="padNav container text-center">
+  <main id="content" class="padNav container text-center">
     <div class="row productHeader">
       <div class="col">
         <div class="productTitle">
@@ -65,7 +65,7 @@
     <div class="row" id="productContent">
       
     </div>
-  </div>
+  </main>
   <footer id="foot">
     <div>
       <img class="brand" src="img/icon.png" alt="Icon">
