--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           </div>
         </div>
       </nav>
-      <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+      <main id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -73,7 +73,7 @@
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </button>
-      </div>
+      </main>
       <footer>
         <div>
           <img class="brand" src="img/icon.png" alt="Icon">
