added different wheels depending on bill total

--- a/Wheel100.html
+++ b/Wheel100.html
@@ -12,16 +12,20 @@
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
-  <canvas id="wheelCanvas" width="500" height="500"></canvas>
-  <div class="spin-text">
-    <h3>Spin to win attractive prizes!</h3>
-    <button id="spin-button" type="button" class="btn btn-outline-dark btn-lg">SPIN</button>
-  </div>
+  <main>
+    <canvas id="wheelCanvas" width="400" height="400"></canvas>
+    <div class="spin-text">
+      <h3 id="title"></h3>
+      <p>We've given you the opportunity to spin the wheel and win attractive prizes!</p>
+      <button id="spin-button" type="button" class="btn btn-outline-dark btn-lg">SPIN</button>
+    </div>
+  </main>
+  
     <!-- Chart JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"></script>
     <!-- Chart JS Plugin for displaying text over chart -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/chartjs-plugin-datalabels/2.1.0/chartjs-plugin-datalabels.min.js"></script>
     <!-- Script -->
-    <script src="wheeljava.js"></script>
+    <script src="wheeljava100.js"></script>
 </body>
 </html>
