--- a/leaderboard.html
+++ b/leaderboard.html
@@ -43,7 +43,7 @@
   <main id="content" class="padNav container text-center flexbody">
     <div class="pageTitle">
         <h1>LEADERBOARD</h1>
-        <p>This month's prize: iPad Pro</p>
+        <p>Our top 3 spenders this month will get: iPad Pro</p>
     </div>
     <div class="board">
         <div class="boardRow boardHead">
