changed carousel indicator colours, added slide 4 base

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
         </div>
         <div class="carousel-inner">
           <div class="carousel-item bg1 active">
@@ -64,6 +65,14 @@
               <div class="carousel-item-bg">
                 <h4>WHEEL OF FORTUNE</h4>
                 <p>After placing your order, spin a wheel to win attractive prizes! <br />*Prizes will vary based on order total.</p>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item bg2">
+            <div class="carousel-caption d-none d-md-block">
+              <div class="carousel-item-bg">
+                <h4>BIG SPENDER'S LEADERBOARD</h4>
+                <p>idk lol</p>
               </div>
             </div>
           </div>
