added home page wheel and leaderboard sections

--- a/index.html
+++ b/index.html
@@ -64,15 +64,16 @@
             <div class="carousel-caption d-none d-md-block">
               <div class="carousel-item-bg">
                 <h4>WHEEL OF FORTUNE</h4>
-                <p>After placing your order, spin a wheel to win attractive prizes! <br />*Prizes will vary based on order total.</p>
+                <p>Spend a minimum of $50 to spin a wheel and win attractive prizes! <br />*Prizes will vary based on order total.</p>
               </div>
             </div>
           </div>
-          <div class="carousel-item bg2">
+          <div class="carousel-item bg4">
             <div class="carousel-caption d-none d-md-block">
               <div class="carousel-item-bg">
-                <h4>BIG SPENDER'S LEADERBOARD</h4>
-                <p>idk lol</p>
+                <h4>WIN AN IPAD PRO</h4>
+                <p>Become one of our top 3 spenders this month to be sent a free iPad Pro!</p>
+                <a href="leaderboard.html"><button type="button" class="leaderboard-btn btn btn-outline-light btn-lg">SEE LEADERBOARD</button></a>
               </div>
             </div>
           </div>
