added comments to cart html and js

--- a/cart.html
+++ b/cart.html
@@ -50,7 +50,7 @@
     </div>
     <div class="cart-area">
         <div id="cart-items" class="cart-items">
-            
+            <!-- js content runs here -->
         </div>
         <div class="checkout-area">
             <div id="total" class="total text-nowrap"></div>
@@ -58,6 +58,7 @@
         </div>
     </div>
   </main>
+
   <footer id="foot">
     <div>
       <img class="brand" src="img/icon.png" alt="Icon">
