fixed quiz qns and styled quiz

--- a/products.html
+++ b/products.html
@@ -85,6 +85,9 @@
     <div class="row" id="product-content">
       
     </div>
+    <div class="row">
+      <p>We allow returns within 30 days with receipt.</p>
+    </div>
   </main>
   <footer id="foot">
     <div>
