styling quiz more, adding links between quiz and index

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               <div class="carousel-item-bg">
                 <h4>HOW WELL DO YOU KNOW US?</h4>
                 <p>Take our short quiz for discount (up to 5%) on your order!</p>
-                <button type="button" class="go-btn btn btn-outline-light btn-lg">GO</button>
+                <a href="quiz.html"><button type="button" class="go-btn btn btn-outline-light btn-lg">GO</button></a>
               </div>
             </div>
           </div>
