--- a/quiz.html
+++ b/quiz.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="app">
-        <h1>Quiz Time!</h1>
+        <h1>QUIZ TIME</h1>
         <div class="quiz">
             <h2 id="question">Question goes here</h2>
             <div id="answer-buttons">
