added comments to all files

--- a/cart.html
+++ b/cart.html
@@ -50,7 +50,7 @@
     </div>
     <div class="cart-area">
         <div id="cart-items" class="cart-items">
-            <!-- js content runs here -->
+            <!-- js content runs here to display cart items -->
         </div>
         <div class="checkout-area">
             <div id="total" class="total text-nowrap"></div>
@@ -60,7 +60,7 @@
   </main>
 
   <footer id="foot">
-    <div>
+    <div class="company-info">
       <img class="brand" src="img/icon.png" alt="Icon">
       <span>&copy; 2024, Star Jewelry Inc.</span>
     </div>
