--- a/Wheel150.html
+++ b/Wheel150.html
@@ -13,22 +13,25 @@
 </head>
 <body>
     <main>
-        <canvas id="wheelCanvas" width="400" height="400"></canvas>
-        <div class="spin-text">
-          <h3 id="title"></h3>
-          <p>We've given you the opportunity to spin the wheel and win attractive prizes!</p>
-          <button id="spin-button" type="button" class="btn btn-outline-dark btn-lg">SPIN</button>
-        </div>
-      </main>
+       <!-- wheel -->
+       <canvas id="wheelCanvas" width="400" height="400"></canvas>
 
-    <!-- The Modal -->
-    <div id="prizeModal" class="modal">
-        <div class="modal-content">
-            <span class="close-button">×</span>
-            <p id="prizeText">Yay! You have won a prize!</p>
-        </div>
-    </div>
-    <!-- Script -->
+       <!-- text and button -->
+       <div class="spin-text">
+         <h3 id="title"></h3>
+         <p>We've given you the opportunity to spin the wheel and win attractive prizes!</p>
+         <button id="spin-button" type="button" class="btn btn-outline-dark btn-lg">SPIN</button>
+       </div>
+     </main>
+
+   <!-- prize alert -->
+   <div id="prizeModal" class="modal">
+       <div class="modal-content">
+           <span class="close-button">×</span>
+           <p id="prizeText">Yay! You have won a prize!</p>
+       </div>
+   </div>
+
     <script src="js/wheeljava150.js"></script>
 </body>
 </html>
