--- a/Wheel50.html
+++ b/Wheel50.html
@@ -13,7 +13,10 @@
 </head>
 <body>
     <main>
+        <!-- wheel -->
         <canvas id="wheelCanvas" width="400" height="400"></canvas>
+
+        <!-- text and button -->
         <div class="spin-text">
           <h3 id="title"></h3>
           <p>We've given you the opportunity to spin the wheel and win attractive prizes!</p>
@@ -21,14 +24,14 @@
         </div>
       </main>
 
-    <!-- The Modal -->
+    <!-- prize alert -->
     <div id="prizeModal" class="modal">
         <div class="modal-content">
             <span class="close-button">×</span>
             <p id="prizeText">Yay! You have won a prize!</p>
         </div>
     </div>
-    <!-- Script -->
+
     <script src="js/wheeljava50.js"></script>
 </body>
 </html>
