--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
         </div>
       </nav>
 
+      <!-- carousel home pages-->
       <main id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+        <!-- shows the page user is currently on -->
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -43,6 +45,7 @@
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
         </div>
         <div class="carousel-inner">
+          <!-- advertise products -->
           <div class="carousel-item bg1 active">
             <div class="carousel-caption d-none d-md-block">
               <div class ="carousel-item-bg">
@@ -52,6 +55,7 @@
               </div>
             </div>
           </div>
+          <!-- links to quiz -->
           <div class="carousel-item bg2">
             <div class="carousel-caption d-none d-md-block">
               <div class="carousel-item-bg">
@@ -61,6 +65,7 @@
               </div>
             </div>
           </div>
+          <!-- advertises wheel-->
           <div class="carousel-item bg3">
             <div class="carousel-caption d-none d-md-block">
               <div class="carousel-item-bg">
@@ -69,6 +74,7 @@
               </div>
             </div>
           </div>
+          <!-- advertises leaderboard -->
           <div class="carousel-item bg4">
             <div class="carousel-caption d-none d-md-block">
               <div class="carousel-item-bg">
@@ -79,10 +85,12 @@
             </div>
           </div>
         </div>
+        <!-- go to left page -->
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Previous</span>
         </button>
+        <!-- go to right page -->
         <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
@@ -90,7 +98,7 @@
       </main>
       
       <footer>
-        <div>
+        <div class="company-info">
           <img class="brand" src="img/icon.png" alt="Icon">
           <span>&copy; 2024, Star Jewelry Inc.</span>
         </div>
