--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
               <div class="carousel-item-bg">
                 <h4>HOW WELL DO YOU KNOW US?</h4>
                 <p>Take our short quiz for discount (up to 5%) on your order!</p>
-                <a href="quiz.html"><button type="button" class="go-btn btn btn-outline-light btn-lg">GO</button></a>
+                <a href="quiz.html"><button type="button" class="go-btn btn btn-outline-light btn-lg">TAKE QUIZ</button></a>
               </div>
             </div>
           </div>
@@ -80,7 +80,7 @@
               <div class="carousel-item-bg">
                 <h4>WIN AN IPAD PRO</h4>
                 <p>Become one of our top 3 spenders this month to be sent a free iPad Pro!</p>
-                <a href="leaderboard.html"><button type="button" class="leaderboard-btn btn btn-outline-light btn-lg">SEE LEADERBOARD</button></a>
+                <a href="leaderboard.html"><button type="button" class="go-btn btn btn-outline-light btn-lg">SEE LEADERBOARD</button></a>
               </div>
             </div>
           </div>
